# movenet_demo

./: .gitignore  README.md  pyproject.toml
movenet-demo/: README.md  pyproject.toml
movenet-demo/src/: main.py
movenet-demo/src/movenet_demo/: drawer.py  model.py
src/: main.py
src/movenet_demo/: drawer.py  model.py
