[project]
name = "movenet_demo"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "ras0q", email = "ras0q@users.noreply.github.com" }]
dependencies = [
    "opencv-python>=4.8.1.78",
    "tensorflow>=2.14.0",
    "tensorflow_hub>=0.15.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=23.9.1", "mypy>=1.6.0", "ruff>=0.1.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line_length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
select = [
    "F", # pyflakes
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "I", # isort
]
ignore = []
line-length = 88

[tool.ruff.per-file-ignores]
# In __init__.py, ignore unused imports
"__init__.py" = ["F401"]
